styling the customer section

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div class="menu2">
             <img src="./images/menu.png">
         
-            <p>We Provide The Best Food At <span>Right Price</span></p>
+            <p>we provide the best food <br> at the <b>right price</b></p>
         </div>
     </div>
 </section>
@@ -90,12 +90,12 @@
 
     </section>
 
-          <section class="to">
+    <section class="to">
        <div><h2 class="ro">Our Happy Customers</h2>
         <h3 class="ki">George Richard</h3>
         <p>Great food! Menu is awesome. there foods are not onlty great but also in the right price. i'll highly recommend them:)</p>
         <div class="lan">
-           <div class="aro"><h1><</h1></div> 
+           <div class="aro"><h1></h1></div> 
            <div class="kip"> <img src="./images/customer1.png" alt="customer 1"></div>
             <div><img src="./images/customer2.png" alt="customer 2"></div>
             <div class="kip"><img src="./images/customer3.png" alt="customer 3"></div>
