styling the drink sector

--- a/index.html
+++ b/index.html
@@ -75,12 +75,12 @@
     </section>
     <section class="tt">
         <div>
-            <h1>Fast Food</h1> 
-            <h2>You'll love our delicious fast food</h2>
+            <h1>Drinks</h1> 
+            <h2>We also produce delicious drinks</h2>
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Minima nulla ipsam labore unde impedit voluptatem animi molestias, fugiat iure alias doloremque natus eum fugit vitae odio ex omnis, laudantium iusto.</p>
             <p class="galary">VIEW GALARY →</p>
         </div>
-        <!-- <div class="uu"> -->
+        <div class="uu">
             <img src="./images/seven.jpg" alt="fast food">
             <img src="./images/eight.jpg" alt="fast food">
          </div>
