--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
         <h3 class="ki">George Richard</h3>
         <p>Great food! Menu is awesome. there foods are not onlty great but also in the right price. i'll highly recommend them:)</p>
         <div class="lan">
-           <div class="aro"><h1></h1></div> 
+           <div class="aro"><h1><</h1></div> 
            <div class="kip"> <img src="./images/customer1.png" alt="customer 1"></div>
             <div><img src="./images/customer2.png" alt="customer 2"></div>
             <div class="kip"><img src="./images/customer3.png" alt="customer 3"></div>
