styling and proper alignments

--- a/index.html
+++ b/index.html
@@ -59,14 +59,15 @@
 </section>
 
     <section class="sec3">
-        <div class="jj"> <div class="uu">
+        <div class="jj"> 
+            <div class="uu">
             <img src="./images/five.jpg" alt="fast food">
             <img src="./images/six.jpg" alt="fast food">
          </div>
         <div>
          <h1>Fast Food</h1> 
          <h2>You'll love our delicious fast food</h2>
-         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Minima nulla ipsam labore unde impedit voluptatem animi molestias, fugiat iure alias doloremque natus eum fugit vitae odio ex omnis, laudantium iusto.</p>
+         Lorem, ipsum dolor sit amet consectetur adipisicing elit. Minima nulla ipsam labore unde impedit voluptatem animi molestias, fugiat iure alias doloremque natus eum fugit vitae odio ex omnis, laudantium iusto.</p>
          <p class="galary">VIEW GALARY →</p>
         </div>
         
@@ -77,9 +78,9 @@
         <div class="tabl">
         
             <div><h1>Drinks</h1> 
-                <h2>We also produce delicious drinks</h2>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Minima nulla ipsam labore unde impedit voluptatem animi molestias, fugiat iure alias doloremque natus eum fugit vitae odio ex omnis, laudantium iusto.</p>
-                <p class="galar">VIEW GALARY →</p>
+                <h3>We also produce delicious drinks</h3>
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Minima nulla ipsam labore unde impedit voluptatem animi molestias, fugiat iure alias doloremque natus eum fugit vitae odio ex omnis, laudantium iusto.</p>
+                <h class="galar">VIEW GALARY →</h3>
             </div>
             <div>
                 <table class="tab">
@@ -102,15 +103,15 @@
     <!-- chickenBurger -->
 
     <section>
-        <div class="switcher">
-            <div class="switcher-container">
-                <div class="switcher-list">
-                        <div class="switcher-list-item1">Fast Food</div>
-                        <p class="switcher-list-item">Drinks</p>
-                        <p class="switcher-list-item">Chicken</p>
-                        <p class="switcher-list-item">Rice</p>
+        <div class="back">
+            <div class="back-container">
+                <div class="end-list">
+                        <div class="end-list-1">Fast Food</div>
+                        <p class="end-list-2">Drinks</p>
+                        <p class="end-list-2">Chicken</p>
+                        <p class="end-list-2">Rice</p>
                 </div>
-                <div class="switcher-images">
+                <div class="aro-images">
                     <div class="food-image1">
                         <img src="./images/chickenBurger.jpg" alt="">
                         <p>Chicken Burger</p>
