adding line to the customer section

--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
 <!-- cchickenBurger -->
 
     <section class="to">
-       <div><h2 class="ro">Our Happy Customers</h2>
+       <div class="border"><h2 class="ro">Our Happy Customers</h2>
         <h3 class="ki">George Richard</h3>
         <p>Great food! Menu is awesome. there foods are not onlty great but also in the right price. i'll highly recommend them:)</p>
         <div class="lan">
@@ -144,7 +144,7 @@
         </div>
     </div> 
         <div><h2 class="ro">About Menu</h2>
-            <p>we are menu alittle team of 7 members. Ut wisi enim ad minim veniam, quis nos trudexer ci tation ullamcorper suscipit lob ortis nisi ut aliquip ex ea cammodo conse quat . duisau tem eum iriure dolor in.</p></div>
+            we are menu alittle team of 7 members. Ut wisi enim ad minim veniam, quis nos trudexer ci tation ullamcorper suscipit lob ortis nisi ut aliquip ex ea cammodo conse quat . duisau tem eum iriure dolor in.</p></div>
 
      <!-- adding footer    -->
     </section>
