box shadow added

--- a/index.html
+++ b/index.html
@@ -131,23 +131,24 @@
 
 <!-- cchickenBurger -->
 
-    <section class="to">
-       <div class="border"><h2 class="ro">Our Happy Customers</h2>
-        <h3 class="ki">George Richard</h3>
-        <p>Great food! Menu is awesome. there foods are not onlty great but also in the right price. i'll highly recommend them:)</p>
-        <div class="lan">
-           <div class="aro"><h1><</h1></div> 
-           <div class="kip"> <img src="./images/customer1.png" alt="customer 1"></div>
-            <div><img src="./images/customer2.png" alt="customer 2"></div>
-            <div class="kip"><img src="./images/customer3.png" alt="customer 3"></div>
-            <div class="aro"><h1>></h1></div>
-        </div>
-    </div> 
-        <div><h2 class="ro">About Menu</h2>
-            we are menu alittle team of 7 members. Ut wisi enim ad minim veniam, quis nos trudexer ci tation ullamcorper suscipit lob ortis nisi ut aliquip ex ea cammodo conse quat . duisau tem eum iriure dolor in.</p></div>
+<section class="too">
+    <div class="borderr"><h2 class="ro">Our Happy Customers</h2>
+     <h3 class="kii">George Richard</h3>
+     <p>Great food! Menu is awesome. there foods are not onlty great but also in the right price. i'll highly recommend them:)</p>
+     <div class="lann">
+        <div class="aroo"><h1><</h1></div> 
+        <div class="kipp"> <img src="./images/customer1.png" alt="customer 1"></div>
+         <div><img src="./images/customer2.png" alt="customer 2"></div>
+         <div class="kipp"><img src="./images/customer3.png" alt="customer 3"></div>
+         <div class="aroo"><h1>></h1></div>
+     </div>
+ </div> 
+     <div><h2 class="ro">About Menu</h2>
+         we are menu alittle team of 7 members. Ut wisi enim ad minim veniam, quis nos trudexer ci tation ullamcorper suscipit lob ortis nisi ut aliquip ex ea cammodo conse quat . duisau tem eum iriure dolor in.</p></div>
 
-     <!-- adding footer    -->
-    </section>
+  <!-- adding footer    -->
+ </section>
+
 
     <!-- adding the subscription section -->
     <body class="tom">
