--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Anitas kitchen</title>
 </head>
 <body>
-    
+   <!-- icon, menu image setup -->
 <section>
     <div class="class">
         <div id="menu">
@@ -21,6 +21,9 @@
         </div>
     </div>
 </section>
+<!-- end of section 1 -->
+
+<!-- section 2 menu selection -->
 
 <section class="tables">
     <table class="main">
@@ -50,6 +53,8 @@
         </tr>
     </table>
 </section>
+ 
+<!-- end of section 2 -->
 
 <section>
     <div class="section2">
