adding icon button

--- a/index.html
+++ b/index.html
@@ -11,9 +11,12 @@
    <!-- icon, menu image setup -->
 <section>
     <div class="class">
-        <div id="menu">
+        <!-- <div id="menu">
             <img src="./images/icons8-menu-24.png">
-        </div>
+        </div> -->
+        <div class="menu">
+            <span>&#9776;</span>
+      </div>
         <div class="menu2">
             <img src="./images/menu.png">
         
