--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
 </section>
 
     <section class="sec3">
-        <div class="jj"> 
-            <div class="uu">
+        <div class="container10"> 
+            <div class="container9">
             <img src="./images/five.jpg" alt="fast food">
             <img src="./images/six.jpg" alt="fast food">
          </div>
