--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
     </body>
   
     <footer>
-        <a class="YT"><img src="./images/logo_white.png" alt="menu" >MENU <style></style></a>
+        <a class="container8"><img src="./images/logo_white.png" alt="menu" >MENU <style></style></a>
         <p>Thats What We Are</p>
         <a> <img src="./images/facebook.png" alt="facebook"> <img src="./images/twitter.png" alt="twitter"> <img src="./images/pinterest.png" alt="pinterest"></a>
         <p> ©2016 Menu Restaurant</p>
