styling background image

--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
    <!-- icon, menu image setup -->
 <section>
     <div class="class">
-        <!-- <div id="menu">
-            <img src="./images/icons8-menu-24.png">
-        </div> -->
-        <div class="menu">
+        <div id="menu">
+            <img src="./images/wright.png" height="67px">
+        </div>
+        <!-- <div class="menu">
             <span>&#9776;</span>
-      </div>
+      </div> -->
         <div class="menu2">
             <img src="./images/menu.png">
         
