--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
             
         </div>
     </section>
-    <section class="container_table>
+    <section class="container_table">
         <div class="tabl">
         
             <div><h1>Drinks</h1> 
